add outstandingBalance